Fix: Spelling mistake

--- a/Learn_Pyspark/Youtube/Manish Kumar/Spark_Theory/12.Repartition vs Coalesce.ipynb
+++ b/Learn_Pyspark/Youtube/Manish Kumar/Spark_Theory/12.Repartition vs Coalesce.ipynb
@@ -513,7 +513,7 @@
    "outputs": [],
    "source": [
     "# So we have 8 a dataframe with 8 partitions now let's redistribute the data using coalesce\n",
-    "# Let's say we need 3 partitions as we can only descrease the number of partition in coalesce\n",
+    "# Let's say we need 3 partitions as we can only decrease the number of partition in coalesce\n",
     "# Note : coalesce only takes one argument i.e number of partition we want\n",
     "\n",
     "three_coalesce_flight_df = coalesce_flight_df.coalesce(3)"
