Add additional resources for understanding Python constants

--- a/01_Core_Programming/01_Python/A_Basics/constants_additional_info.ipynb
+++ b/01_Core_Programming/01_Python/A_Basics/constants_additional_info.ipynb
@@ -120,6 +120,17 @@
     "```\n",
     "This command will check your file for type-related issues and raise a warning if you attempt to reassign a Final constant."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c4819b80",
+   "metadata": {},
+   "source": [
+    "You can follow two below links to get more information about constants:\n",
+    "\n",
+    "1. [Python Doc - Built-in Constants](https://docs.python.org/3/library/constants.html).\n",
+    "2. [Medium - Do’s and Don’ts of Python Constants: The Ultimate Beginner’s Guide](https://medium.com/%40finnkumar6/dos-and-don-ts-of-python-constants-the-ultimate-beginner-s-guide-c0f765a1966b)"
+   ]
   }
  ],
  "metadata": {
